@@ -1,4 +1,9 @@
 {{$NEXT}}
+    - Ensure the returned comment has the leading comment char and space
+    - Add new test and modify existing tests as required
+    - Add alias named arg to sub strip-comment:
+      + :mark(:$comment-char) <= new alias '$comment-char'
+    - Tweak docs
 
 3.3.3  2024-03-31T14:15:26-05:00
     - Upgrade Github workflows actions to @v4
